<resources>
    <string name="app_name">Student Management System</string>
    <string name="username">UserName</string>
    <!--    <string name="email">email</string>-->
    <!--    <string name="password">password</string>-->
    <!--    <string name="SignUp">SignUp</string>-->
    <!--    <string name="Cancel">Cancel</string>-->
    <!--    <string name="SignIn">SignIn</string>-->
    <!--    <string name="Sign_in_here">Sign in here</string>-->
    <!--    <string name="Already_have_an_account">Already have an account?</string>-->
    <!--    <string name="TextView">TextView</string>-->
    <!--    <string name="TextView2">Already have an account?</string>-->
    <!--    <string name="Sign_up_here">Sign up here</string>-->
    <!--    <string name="TextView3">Not Registered?</string>-->
    <!--    <string name="Student_Id">RollNo</string>-->
    <!--    <string name="Student_id">Student Id</string>-->
    <!--    <string name="confpass">confirm password</string>-->
    <!--    <string name="user_type">user type</string>-->
    <string name="e_mail">E-mail</string>
    <string name="enter__password">Enter Password</string>
    <string name="register_">Register</string>
    <string name="cancel_">Cancel</string>
    <string name="textreg">TextView</string>
    <string name="textreglog">TextView</string>
    <string name="log_email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="cancel__">Cancel</string>
    <string name="textlog">textlog</string>
    <string name="textlogreg">textlogreg</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login__here">Login here</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register_here">Register here</string>
    <string name="user_id">User Id</string>
    <string name="userid">User id</string>
    <string name="list_of_courses">List of courses</string>
    <string name="registered_courses">Registered Courses</string>
    <string name="add_courses">add courses</string>
    <string name="add_course">Add Course</string>
    <string name="Add_Course">add course</string>
    <string name="Course_Name">Course Name</string>
    <string name="registeredcourse">registeredcourse</string>
    <string name="start_date">Start Date</string>
    <string name="course_duration">Course Duration</string>
    <string name="course_start_time">Course Start Time</string>
    <string name="course_end_time">Course End Time</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="setdate">SetDate</string>
    <string name="start_time">Start time</string>
    <string name="courseduration">courseduration</string>
    <string name="faculty">faculty</string>
    <string name="end_time">end time</string>
    <string name="course_duration_in_weeks">course duration in terms of weeks</string>
    <string name="duration_in_weeks">duration in terms of weeks</string>
    <string name="duration_in___weeks">duration in weeks</string>
    <string name="save_date">Save Date</string>
    <string name="faculty_list">faculty list</string>
    <string name="student_list">student list</string>
    <string name="faculty_id">faculty id</string>
    <string name="delete">Delete</string>
    <string name="student_name">student name</string>
    <string name="student_id">student id</string>
    <string name="registered_courses_with_students">registered courses with students</string>
    <string name="logout">logout</string>
    <string name="registration_page">REGISTRATION PAGE</string>
    <string name="student_page">STUDENT PAGE</string>
    <string name="admin_page">ADMIN PAGE</string>
    <string name="faculty_page">FACULTY PAGE</string>
    <string name="add_admin">add admin</string>
    <string name="add_faculty">ADD FACULTY</string>
    <string name="addfaculty_id">Faculty Id</string>
    <string name="addfaculty_name">Faculty Name</string>
    <string name="submit">submit</string>
    <string name="adminadd_admin">ADD ADMIN</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_id">Admin Id</string>
    <string name="add_course_page">ADD COURSE PAGE</string>
    <string name="adminadd_course">ADD COURSE</string>
    <string name="attendance">Attendance</string>
    <string name="marks">Marks</string>
    <string name="fac_attendance">ATTENDANCE</string>
    <string name="add_attendance">Add attendance</string>
    <string name="view_attendance">view attendance</string>
    <string name="course_name">course name</string>
    <string name="course">course</string>
    <string name="fac_id">Faculty id</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="search">search</string>
    <string name="faculty_detail">Faculty detail</string>
    <string name="present">PRESENT</string>
    <string name="absent">ABSENT</string>
    <string name="courses">COURSES</string>
    <string name="students">STUDENTS</string>
    <string name="facmarks">MARKS</string>
    <string name="add_marks">add marks</string>
    <string name="view_marks">view marks</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string-array name="usertype">
        <item>Admin</item>
        <item>Faculty</item>
        <item>Student</item>
    </string-array>
</resources>
