<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_background">
        <TextView
            android:id="@+id/textview_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Course_Name"
            android:background="@drawable/custom_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="14sp"
            android:textColor="#000"
            android:padding="10dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faculty"
                android:background="@drawable/custom_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="10sp"
                android:textColor="#000"
                android:padding="10dp"
                android:layout_margin="5dp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textview_sdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="10sp"
                android:background="@drawable/custom_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#000"
                android:padding="10dp"
                android:layout_margin="5dp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textview_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courseduration"
                android:background="@drawable/custom_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="10sp"
                android:textColor="#000"
                android:padding="10dp"
                android:layout_margin="5dp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_stime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:background="@drawable/custom_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="10sp"
                android:textColor="#000"
                android:padding="10dp"
                android:layout_margin="5dp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textview_etime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:background="@drawable/custom_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="10sp"
                android:textColor="#000"
                android:padding="10dp"
                android:layout_margin="5dp"
                tools:ignore="SmallSp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:id="@+id/delete"
                android:background="@drawable/custom_deletebutton"
                android:text="@string/delete"
                android:textSize="10sp"
                android:padding="10dp"
                android:layout_margin="5dp"
                tools:ignore="SmallSp" />

        </LinearLayout>






    </LinearLayout>


</androidx.cardview.widget.CardView>