<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stdname"
            android:text="@string/student_name"
            android:background="@drawable/custom_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:textColor="#000"
            android:padding="10dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/studentid"
                android:text="@string/student_id"
                android:background="@drawable/custom_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="15sp"
                android:textColor="#000"
                android:padding="10dp"
                android:layout_margin="5dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/delete"
                android:text="@string/delete"
                android:background="@drawable/custom_deletebutton"                android:padding="10dp"
                android:layout_margin="5dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>